# dune-functions

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  COPYING  Makefile.am  README  README.md  TODO  TODO.md  config.h.cmake  configure.ac  dune-functions.pc.in  dune.module
cmake/modules/: CheckCXX11Features.cmake  Makefile.am
cmake/pkg/: Makefile.am
doc/: CMakeLists.txt  Makefile.am  index_sets.cc  protocol_achen_2014.txt
doc/doxygen/: .gitignore  CMakeLists.txt  Doxylocal  custom.css  doxygen_groups.hh  dune-functions.png.license  examples.md  license.md  mainpage.md
doc/gfx/: dune-functions-taylor-hood-tree.svg.license
doc/manual/: .gitignore  CMakeLists.txt  (+6 more)
dune/: CMakeLists.txt  Makefile.am
dune/functions/: CMakeLists.txt  Makefile.am  functions.hh  modules.md
dune/functions/analyticfunctions/: CMakeLists.txt  Makefile.am  monomialset.hh  polynomial.hh  trigonometricfunction.hh
dune/functions/analyticfunctions/test/: CMakeLists.txt  monomialsettest.cc  polynomialtest.cc
dune/functions/backends/: CMakeLists.txt  concepts.hh  containerfactory.hh  istlvectorbackend.hh  istlvectorfactory.hh
dune/functions/backends/test/: .gitignore  CMakeLists.txt  containerfactorytest.cc  istlvectorbackendtest.cc  istlvectorfactorytest.cc
dune/functions/common/: CMakeLists.txt  Makefile.am  access.hh  callable.hh  concept.hh  defaultderivativetraits.hh  densevectorview.hh  differentiablefunction.hh  differentiablefunction_imp.hh  differentiablefunctionfromcallables.hh  final.hh  functionconcepts.hh  functionfromcallable.hh  functionrange.hh  functionspacetypes.hh  geometryinancestor.hh  gridviewfunction.hh  hybridsize.hh  indexaccess.hh  interfaces.hh  lagrangelfecache.hh  localfunction.hh  localfunction_imp.hh  mapperutilities.hh  multiindex.hh  new_differentiablefunction.hh  new_differentiablefunction_imp.hh  new_localfunction.hh  new_localfunction_imp.hh  optional.hh  overflowarray.hh  polymorphicsmallobject.hh  referencehelper.hh  reserveddeque.hh  resize.hh  signature.hh  smallobject.hh  squeezetensor.hh  staticforloop.hh  staticgeometrytype.hh  (+10 more)
dune/functions/common/test/: .gitignore  CMakeLists.txt  Makefile.am  collectorstream.hh  concept.cc  derivativecheck.hh  differentiablefunctiontest.cc  functionfromcallabletest.cc  polymorphicsmallobjecttest.cc  referencehelpertest.cc  testsuite.hh  treedatatest.cc
dune/functions/functionspacebases/: CMakeLists.txt  Makefile.am  algorithms.hh  argyrisbasis.hh  basistags.hh  bdmbasis.hh  blocking.hh  blockingtags.hh  boundarydofs.hh  brezzidouglasmarinibasis.hh  bsplinebasis.hh  compositebasis.hh  concepts.hh  containerdescriptors.hh  cubichermitebasis.hh  defaultglobalbasis.hh  defaultglobalindexset.hh  defaultlocalindexset.hh  defaultlocalview.hh  defaultnodetorangemap.hh  dynamicdgbasis.hh  dynamicordernode.hh  dynamicpowerbasis.hh  flatmultiindex.hh  flatvectorbackend.hh  flatvectorview.hh  functionaldescriptor.hh  functionspacebasis.hh  geometrytypeprovider.hh  globalvaluedlocalfiniteelement.hh  gridviewfunctionspacebasis.hh  hermitebasis.hh  hierarchicaccess.hh  hierarchicallagrangebasis.hh  hierarchicallagrangewithelementbubblebasis.hh  hierarchicnodetorangemap.hh  hierarchicresizer.hh  hierarchicvectorbackend.hh  hierarchicvectorwrapper.hh  hierarchicwrapper.hh  (+34 more)
dune/functions/functionspacebases/test/: .gitignore  CMakeLists.txt  Makefile.am  argyristest.cc  basistest.hh  blockingtest.cc  brezzidouglasmarinibasistest.cc  bsplinebasistest.cc  compositebasistest.cc  consistencytest.cc  constantinterpolationtest.cc  containerdescriptortest.cc  cubichermitebasis.hh  cubichermitetest.cc  dynamicdgtest.cc  enabledifferentiabilitycheck.hh  globalvaluedlfetest.cc  gridviewfunctionspacebasistest.cc  hermitebasistest.cc  hermitetest.cc  hierarchicallagrangebasistest.cc  hierarchicallagrangewithelementbubblebasistest.cc  hierarchicresizertest.cc  hierarchicvectorwrappertest.cc  hierarchicwrappertest.cc  interpolatetest.hh  istlvectorbackendtest.cc  lagrangebasistest.cc  lagrangedgbasistest.cc  lfebasistest.cc  makebasistest.cc  matrixvectorgeneratortest.cc  morleytest.cc  nedelecbasistest.cc  periodicbasistest.cc  persistentgridviewtest.cc  pq1nodalbasistest.cc  rannacherturekbasistest.cc  raviartthomasbasistest.cc  refinedlagrangebasistest.cc  (+5 more)
dune/functions/gridfunctions/: CMakeLists.txt  Makefile.am  analyticgridviewfunction.hh  coarsefunctiononfinegridview.hh  coarsegridviewfunction.hh  composedgridfunction.hh  discreteglobalbasisfunction.hh  discretegridviewfunction.hh  discretescalarglobalbasisfunction.hh  facenormalgridfunction.hh  finefunctiononcoarsegridview.hh  finegridviewfunction.hh  gridfunction.hh  gridfunction_imp.hh  gridviewentityset.hh  gridviewfunction.hh  localderivativetraits.hh  new_discretescalarglobalbasisfunction.hh  new_gridfunction.hh  new_gridfunction_imp.hh
dune/functions/gridfunctions/test/: .gitignore  CMakeLists.txt  Makefile.am  analyticgridviewfunctiontest.cc  brezzidouglasmarinifunctiontest.cc  coarsefinegridfunctiontest.cc  composedgridfunctiontest.cc  continuitychecks.hh  derivativetest.cc  discreteglobalbasisfunctionderivativetest.cc  discreteglobalbasisfunctiontest.cc  discretescalarglobalbasisfunctiontest.cc  facenormalgridfunctiontest.cc  gridfunctiontest.cc  gridfunctiontest.hh  localfunctioncopytest.cc  raviartthomasfunctiontest.cc
dune/functions/pdelab-copy/: finiteelementmap.hh  raviartthomasfem.hh
dune/functions/test/: .gitignore  CMakeLists.txt  Makefile.am  hello.cc
dune/python/functions/: CMakeLists.txt  discretefunction.hh  globalbasis.hh  hierarchicvectorwrapper.hh  interpolate.hh  subspacebasis.hh  tree.hh
examples/: CMakeLists.txt  advection-reaction-dg.cc  derivative-test.cc  interpolation.cc  poisson-mfem.cc  poisson-mfem.py  poisson-pq2.cc  poisson-pq2.py  poisson-rt0-p0-unstructured.cc  poisson-rt0-p0.cc  rt0-basistest.cc  stokes-taylorhood.cc
m4/: CMakeLists.txt  Makefile.am  dune-final.m4  dune-functions.m4
python/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  dune-functions.cc  dune_functions.cc
(+33 files in other folders)
