commonincludedir = $(includedir)/dune/functions/common
commoninclude_HEADERS = \
                        callable.hh \
                        differentiablefunction.hh \
                        final.hh \
                        localfunction.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
