commonincludedir = $(includedir)/dune/functions/common
commoninclude_HEADERS = \
                        callable.hh \
						concept.hh \
						defaultderivativetraits.hh \
                        differentiablefunction.hh \
                        functionfromcallable.hh \
                        localfunction.hh \
                        new_differentiablefunction.hh \
                        new_differentiablefunction_imp.hh \
						smallobject.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
