functionspacebasesincludedir = $(includedir)/dune/functions/functionspacebases
functionspacebasesinclude_HEADERS = functionspacebasis.hh \
                                    gridviewfunctionspacebasis.hh \
                                    pq1nodalbasis.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
