functionspacebasesincludedir = $(includedir)/dune/functions/functionspacebases
functionspacebasesinclude_HEADERS = gridviewfunctionspacebasis.hh \
                                    pq1nodalbasis.hh \
                                    pq2nodalbasis.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
